// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Snapshot Tests App snapshot test 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <UploadButton
      className="upload-button"
      id="contained-button-file"
      onChange={[Function]}
    />
    <div
      id="generation-container"
    >
      <WithStyles(Button)
        color="primary"
        id="generate-json"
        onClick={[Function]}
        variant="contained"
      >
        Generate JSON
      </WithStyles(Button)>
      <WithStyles(Button)
        color="primary"
        id="generate-xml"
        onClick={[Function]}
        variant="contained"
      >
        Generate XML
      </WithStyles(Button)>
    </div>
    <WithStyles(Button)
      color="secondary"
      id="clear-button"
      onClick={[Function]}
      variant="contained"
    >
      Clear Data
    </WithStyles(Button)>
  </header>
  <WithStyles(SimpleSnackbar) />
  <ContentContainer
    className="file-content"
    content=""
    hidden={true}
    id="xml-file-content"
  />
  <ContentContainer
    className="file-content"
    content=""
    hidden={true}
    id="json-file-content"
  />
</div>
`;

exports[`App Snapshot Tests ContentContainer hidden snapshot test 1`] = `
<pre
  className="file-content"
  hidden={true}
  id="xml-file-content"
>
  &lt;XML&gt;&lt;/XML&gt;
</pre>
`;

exports[`App Snapshot Tests ContentContainer hidden=false snapshot test 1`] = `
<pre
  className="file-content"
  hidden={false}
  id="xml-file-content"
>
  &lt;XML&gt;&lt;/XML&gt;
</pre>
`;

exports[`App Snapshot Tests SimpleSnackbar snapshot test 1`] = `
<SimpleSnackbar
  classes={
    Object {
      "close": "SimpleSnackbar-close-1",
    }
  }
  message="THIS IS A MESSAGE"
  open={true}
/>
`;

exports[`App Snapshot Tests UploadButton snapshot test 1`] = `
<label
  htmlFor="contained-button-file"
  id="file-select"
>
  <input
    id="contained-button-file"
    name="upload-button"
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
  <WithStyles(Button)
    component="span"
    variant="contained"
  >
    Upload File
  </WithStyles(Button)>
</label>
`;
